--- a/config.org
+++ b/config.org
@@ -42,10 +42,14 @@
   (setq coding-system-for-write 'utf-8 )
   (setq sentence-end-double-space nil)	; sentence SHOULD end with only a point.
   (setq default-fill-column 80)		; toggle wrapping text at the 80th character
-  (setq tab-width 2)                    ; tab are 2 spaces large
+  (setq-default tab-width 2)                    ; tab are 2 spaces large
   (setq initial-scratch-message "Welcome to Emacs") ; print a default message in the empty scratch buffer opened at startup
   (setq tab-stop-list (number-sequence 2 120 2)) ;; set tab length
   (setq evil-want-C-u-scroll t) ;; scroll with C-u like in vim
+;;(set-display-table-slot standard-display-table 'wrap ?\ )
+  (set-display-table-slot standard-display-table 0 ?\ ) 
+  (set-display-table-slot standard-display-table 'wrap ?\ )
+  (setq-default indent-tabs-mode nil)
   
 (mapc
  (lambda (face)
@@ -131,7 +135,7 @@
   (ansi-term "/bin/zsh")
   (mode-line-other-buffer)
   (split-window-below))
-
+  
 #+end_src
 
 
@@ -155,6 +159,9 @@
 ;;   "C-n" 'company-select-next             ; search for string in current buffer
    "/" 'swiper             ; search for string in current buffer
    "M-x" 'counsel-M-x        ; replace default M-x with ivy backend
+   "n" 'evil-search-previous
+   "N" 'evil-search-next
+   "\\" 'evil-ex-nohighlight
    )
   (general-define-key
    :keymaps 'neotree-mode-map
@@ -239,7 +246,9 @@
    "wK" '(evil-window-move-very-top :which-key "move up")
    "wl" '(evil-window-right :which-key "right")
    "wL" '(evil-window-move-far-right :which-key "move right")
-   ))
+   )
+
+)
 #+end_src
 
 
@@ -253,6 +262,9 @@
     :config
     (evil-mode 1)
     (define-key evil-insert-state-map (kbd "TAB") 'tab-to-tab-stop)
+    (setq-default evil-shift-width 2)
+    (setq evil-search-module 'evil-search)
+;;    (setq evil-ex-nohighlight t)
 ;; More configuration goes here
 )
 #+end_src
@@ -339,21 +351,31 @@ load-path))
 
 ** Dashboard
 #+begin_src emacs-lisp
-(use-package dashboard :ensure t
- :config
- (dashboard-setup-startup-hook)
- (setq dashboard-items '((recents  . 5)
-		  (bookmarks . 5)
-		  (projects . 5)
-		  (agenda . 5)
-		  (registers . 5)))
- )
+  (use-package dashboard :ensure t
+   :config
+   (dashboard-setup-startup-hook)
+   (setq dashboard-items '((recents  . 5)
+		    (bookmarks . 5)
+		    (projects . 5)
+		    (agenda . 5)
+		    (registers . 5)))
+   )
+    ;; (add-hook 'dashboard-mode-hook
+    ;; 	    (lambda ()
+    ;; 	       (set-display-table-slot buffer-display-table 'wrap ?\ )))
 #+end_src
 
 ** Page Break Lines
 Display horizontal lines instead of ugly characters
 #+begin_src emacs-lisp
-(use-package page-break-lines :ensure t)
+   (use-package page-break-lines :ensure t)
+  ;;  (add-hook 'page-break-lines-mode-hook
+  ;; 	    (lambda ()
+  ;; (set-display-table-slot standard-display-table 0 ?\ )))
+  ;; (add-hook 'page-break-lines-mode-hook
+  ;; (lambda ()
+  ;;  (set-display-table-slot buffer-display-table 0 ?\ )))
+  ;;(set-display-table-slot buffer-display-table 'wrap ?\ )))
 #+end_src
 
 ** Company
@@ -456,6 +478,7 @@ Display horizontal lines instead of ugly characters
 (add-hook 'prog-mode-hook 'company-mode)
 (add-hook 'prog-mode-hook 'electric-pair-mode)
 (add-hook 'prog-mode-hook 'evil-commentary-mode)
+(add-hook 'prog-mode-hook 'column-number-mode)
 ;;(add-hook 'prog-mode-hook 'yas-global-mode)
 (yas-reload-all)
 (add-hook 'prog-mode-hook #'yas-minor-mode)
@@ -518,9 +541,18 @@ Display horizontal lines instead of ugly characters
     ;;(add-hook 'before-save-hook 'tide-format-before-save)
     (add-hook 'typescript-mode-hook #'setup-tide-mode)
     )
-  (setq typescript-indent-level 2) ; 
   (setq typescript-indent-level 2
 	typescript-expr-indent-offset 2)
+  (setq evil-shift-width 2)
+  (setq typescript-indent-level 2) ; 
+
+   ;; typescript mode specific keybindings
+   (general-define-key
+   :states 'normal
+   :keymaps 'typescript-mode-map
+   "gd" 'tide-jump-to-definition
+   )
+
 #+end_src
 
 
