--- a/config.org
+++ b/config.org
@@ -475,16 +475,16 @@ Display horizontal lines instead of ugly characters
 
 * ProgMode
 #+begin_src emacs-lisp
-(add-hook 'prog-mode-hook 'company-mode)
-(add-hook 'prog-mode-hook 'electric-pair-mode)
-(add-hook 'prog-mode-hook 'evil-commentary-mode)
-(add-hook 'prog-mode-hook 'column-number-mode)
-;;(add-hook 'prog-mode-hook 'yas-global-mode)
-(yas-reload-all)
-(add-hook 'prog-mode-hook #'yas-minor-mode)
-(add-hook 'prog-mode-hook 'indent-guide-mode)
-(add-hook 'prog-mode-hook 'whitespace-mode)
-(add-hook 'prog-mode-hook #'rainbow-delimiters-mode)
+  (add-hook 'prog-mode-hook 'company-mode)
+  (add-hook 'prog-mode-hook 'electric-pair-mode)
+  (add-hook 'prog-mode-hook 'evil-commentary-mode)
+  (add-hook 'prog-mode-hook 'column-number-mode)
+  ;;(add-hook 'prog-mode-hook 'yas-global-mode)
+  (yas-reload-all)
+  (add-hook 'prog-mode-hook #'yas-minor-mode)
+  (add-hook 'prog-mode-hook 'indent-guide-mode)
+  ;; (add-hook 'prog-mode-hook 'whitespace-mode)
+  (add-hook 'prog-mode-hook #'rainbow-delimiters-mode)
 #+end_src
 
 
